fix rounded corners on form input on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,7 @@ select {
     width: 100%;
     height: 100%;
     border: 0;
+    border-radius: 0;
     background-color: #ffffff;
     padding-left: 1rem;
     font-family: "Montserrat", sans-serif;
